--- a/data/equipment/equipment-01-Zmz2M2u7mGOCbUf4.htm
+++ b/data/equipment/equipment-01-Zmz2M2u7mGOCbUf4.htm
@@ -1,6 +1,6 @@
 Name: Walking Cauldron
 Nom: Chaudron baladeur
-État: simple
+État: libre
 
 ------ Description (en) ------
 <p>This iron cauldron stands upon sturdy iron crow's feet. A <em>walking cauldron</em> has a land Speed of 25 feet and can be used as a suitable tool to <em>Craft </em>potions, oils, or other liquids.</p>
