--- a/data/feats/class-12-lPTcPIshChHWz4J6.htm
+++ b/data/feats/class-12-lPTcPIshChHWz4J6.htm
@@ -1,13 +1,12 @@
 Name: Critical Debilitation
 Nom: Handicap critique
 PrereqEN: Debilitating Strike
-PrereqFR: 
-État: changé
-État d'origine: officielle
+PrereqFR: Frappe incapacitante
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: Your debilitations are especially effective on your most powerful attacks.
-Avantage: Vos débilitations sont particulièrement efficaces sur vos attaques les plus puissantes.
+Avantage: Votre Frappe incapacitante ralentit ou paralyse votre cible.
 
 ------ Description (en) ------
 <p>Your debilitations are especially effective on your most powerful attacks. Whenever you critically succeed at an attack roll against an enemy and use Debilitating Strike, add the following debilitation to the list you can choose from.</p>
@@ -18,11 +17,10 @@ Avantage: Vos débilitations sont particulièrement efficaces sur vos attaques l
 <p><strong>Failure:</strong> The target is slowed 2 until the end of your next turn.</p>
 <p><strong>Critical Failure:</strong> The target is paralyzed until the end of your next turn.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> @Compendium[pf2e.actionspf2e.bp0Up04x3dzGK5bB]{Frappe incapacitante}</p>
-<hr>
 <p>Les handicaps que vous infligez sont particulièrement efficaces quand ils sont associés à vos attaques les plus puissantes. Quand vous obtenez un succès critique à un jet d’attaque contre un ennemi en utilisant Frappe incapacitante, vous ajoutez le handicap suivant à la liste parmi laquelle vous pouvez choisir.</p>
+<hr />
 <p><strong>Handicap</strong> La cible tente un jet de Vigueur contre votre DD de classe avec les effets suivants.</p>
 <p><strong>Succès critique</strong> La cible n'est pas affectée.</p>
-<p><strong>Succès</strong> La cible est @Compendium[pf2e.conditionitems.xYTAsEpcJE1Ccni3]{ralentie} 1 jusqu'à la fin de votre prochain tour.</p>
-<p><strong>Échec</strong> La cible est ralentie 2 jusqu’à la fin de votre prochain tour.</p>
-<p><strong>Échec critique</strong> La cible est @Compendium[pf2e.conditionitems.6uEgoh53GbXuHpTF]{paralysée} jusqu’à la fin de votre prochain tour</p>
+<p><strong>Succès</strong> La cible est @Compendium[pf2e.conditionitems.xYTAsEpcJE1Ccni3]{Ralentie} 1 jusqu'à la fin de votre prochain tour.</p>
+<p><strong>Échec</strong> La cible est Ralentie 2 jusqu’à la fin de votre prochain tour.</p>
+<p><strong>Échec critique</strong> La cible est @Compendium[pf2e.conditionitems.6uEgoh53GbXuHpTF]{Paralysée} jusqu’à la fin de votre prochain tour</p>
