--- a/data/feats/class-12-Px1QZY0NdO9WAQQS.htm
+++ b/data/feats/class-12-Px1QZY0NdO9WAQQS.htm
@@ -2,14 +2,13 @@ Name: Mobile Finisher
 Nom: Botte mobile
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You attack in motion.
-Avantage: Vous attaquez en mouvement.
+Avantage: Vous Frappez durant votre mouvement.
 
 ------ Description (en) ------
 <p>You attack in motion. @Compendium[pf2e.actionspf2e.Bcxarzksqt9ezrs6]{Stride} and then @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Strike}. You can use Mobile Finisher while @Compendium[pf2e.actionspf2e.H6v1VgowHaKHnVlG]{Burrowing}, @Compendium[pf2e.actionspf2e.pprgrYQ1QnIDGZiy]{Climbing}, @Compendium[pf2e.actionspf2e.cS9nfDRGD83bNU1p]{Flying}, or @Compendium[pf2e.actionspf2e.c8TGiZ48ygoSPofx]{Swimming} instead of Striding if you have the corresponding movement type.</p>
 ------ Description (fr) ------
-<p>Vous attaques en mouvement. @Compendium[pf2e.actionspf2e.Bcxarzksqt9ezrs6]{Marchez rapidement} puis @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappez}. Vous pouvez utiliser Botte mobile pendant que vous @Compendium[pf2e.actionspf2e.H6v1VgowHaKHnVlG]{Creusez}, @Compendium[pf2e.actionspf2e.pprgrYQ1QnIDGZiy]{Escaladez}, @Compendium[pf2e.actionspf2e.cS9nfDRGD83bNU1p]{Volez} ou @Compendium[pf2e.actionspf2e.c8TGiZ48ygoSPofx]{Nagez} au lieu de Marcher si vous disposez des types de déplacement correspondant.</p>
+<p>Vous attaquez durant votre mouvement. @Compendium[pf2e.actionspf2e.Bcxarzksqt9ezrs6]{Marchez rapidement} puis @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappez}. Vous pouvez utiliser Botte mobile pendant que vous @Compendium[pf2e.actionspf2e.H6v1VgowHaKHnVlG]{Creusez}, @Compendium[pf2e.actionspf2e.pprgrYQ1QnIDGZiy]{Escaladez}, @Compendium[pf2e.actionspf2e.cS9nfDRGD83bNU1p]{Volez} ou @Compendium[pf2e.actionspf2e.c8TGiZ48ygoSPofx]{Nagez} au lieu de Marcher si vous disposez des types de déplacement correspondant.</p>
