--- a/data/feats/class-12-QicYF43HqgpOBLzo.htm
+++ b/data/feats/class-12-QicYF43HqgpOBLzo.htm
@@ -1,13 +1,12 @@
 Name: Bloody Debilitation
 Nom: Handicap sanglant
 PrereqEN: trained in Medicine|Debilitating Strike
-PrereqFR: 
-État: changé
-État d'origine: libre
+PrereqFR: qualifié en Médecine|Frappe incapacitante
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Your attacks slice arteries and veins.
-Avantage: Vos attaques tranchent les artères et les veines.
+Avantage: Frappe incapacitante inflige 3d6 dégâts de saignement persistants.
 
 ------ Description (en) ------
 <p>Your attacks slice arteries and veins. Add the following debilitation to the list you can choose from when you use Debilitating Strike.</p>
@@ -15,8 +14,6 @@ Avantage: Vos attaques tranchent les artères et les veines.
 <li><strong>Debilitation</strong> The target takes [[/r 3d6 #persistent bleed]] persistent bleed damage.</li>
 </ul>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> qualifié en Médecine, @Compendium[pf2e.classfeatures.9SruVg2lZpNaYLOB]{Frappes incapacitantes}</p>
-<hr>
 <p>Vos attaques coupent les artères et les veines. Ajoutez le handicap suivant à la liste dans laquelle vous pouvez choisir lorsque vous utilisez @Compendium[pf2e.actionspf2e.bp0Up04x3dzGK5bB]{Frappe incapacitante}.</p>
 <ul>
 <li><strong>Handicap</strong> La cible subit [[/r 3d6 #saignement persistant]] dégâts de saignement persistant.</li>
