--- a/data/feats/class-12-qI5ZyuNVME95iXhJ.htm
+++ b/data/feats/class-12-qI5ZyuNVME95iXhJ.htm
@@ -2,8 +2,7 @@ Name: Fantastic Leap
 Nom: Bond fantastique
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You launch yourself through the air at a foe.
@@ -13,3 +12,4 @@ Avantage: Vous vous lancez dans les airs vers un ennemi.
 <p>You launch yourself through the air at a foe. Attempt a High Jump or Long Jump. If you attempt a High Jump, determine the distance you can travel using the scale of a Long Jump. At the end of your jump, you can make a melee Strike. After your Strike, you fall to the ground if you're in the air. If the distance of your fall is no more than the height of your jump, you take no damage and land upright.</p>
 ------ Description (fr) ------
 <p>Vous vous élancez dans les airs en direction d’un adversaire. Vous tentez de faire un Saut en hauteur ou un Saut en longueur. Si vous tentez de Sauter en hauteur, vous déterminez la distance que vous pouvez parcourir en utilisant l’échelle d’un saut en longueur. À la fin de votre saut, vous pouvez faire une Frappe au corps à corps.</p>
+<p>Après votre Frappe, vous chutez au sol si vous êtes en l'air. Si la distance de votre chute n'est pas supérieure à la hauteur de votre saut, vous ne subissez pas de dégâts et tombez sur vos pas.</p>
