--- a/data/equipment/equipment-00-3tOyV4VZEZhwnAMO.htm
+++ b/data/equipment/equipment-00-3tOyV4VZEZhwnAMO.htm
@@ -1,7 +1,6 @@
 Name: Fishing Tackle
 Nom: Articles de pêche
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>This kit include a collapsible fishing pole, fishhooks, line, lures, and a fishing net.</p>
