--- a/data/equipment/equipment-14-iwC6V10pTd6Sk0ML.htm
+++ b/data/equipment/equipment-14-iwC6V10pTd6Sk0ML.htm
@@ -1,6 +1,6 @@
 Name: Sealing Chest (Major)
-Nom: 
-État: auto-trad
+Nom: Coffre scellé (majeur)
+État: libre
 
 ------ Description (en) ------
 <p>Vigilant Seal members use these containers when transporting samples and relics.</p>
@@ -8,3 +8,4 @@ Nom:
 ------ Description (fr) ------
 Les membres du Sceau vigilant utilisent ces conteneurs pour transporter des échantillons et des reliques ;
 <p>Les conteneurs sont insonorisés, hermétiques et constellés de feuilles de plomb, de gui et d'autres matériaux qui bloquent les auras magiques. On peut placer jusqu'à 1 Vrac d'objets à l'intérieur d'un coffre à sceller ; les auras magiques et les malédictions des objets placés dans le coffre ne peuvent pas s'étendre au-delà de la boîte, sauf s'ils sont d'un niveau supérieur à celui du coffre. Les artefacts et les objets de puissance similaire ne sont pas affectés, quel que soit leur niveau. Beaucoup d'objets maudits empêchent leur porteur de les retirer, mais une levée de malédiction réussie donne suffisamment de temps pour planquer l'objet dans le coffre.</p>
+<p>Niveau 14, @Compendium[pf2e.actionspf2e.eReSHVEPCsdkSL4G]{Identifier la magie} Arcane, Nature, Occultisme ou Religion DD 34</p>
