fin de révision des dons 12

--- a/data/feats/class-12-uAh31Hnp1EZSjd40.htm
+++ b/data/feats/class-12-uAh31Hnp1EZSjd40.htm
@@ -2,14 +2,12 @@ Name: Invincible Mutagen
 Nom: Mutagène invincible
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: The fortifying additives you brew into your mutagens make your juggernaut form impervious.
-Avantage: Les additifs fortifiants que tu mélanges à tes mutagènes rendent ta forme de juggernaut imperméable.
------- Benefits and spoiler ----
-Avantage: Les additifs fortifiants que tu mélanges à tes mutagènes rendent ta forme de juggernaut imperméable.
+Avantage: Votre mutagène de juggernaut vous accorde une résistance à tous les dégâts physiques égale à votre modificateur d’Intelligence.
+
 ------ Description (en) ------
 <p>Repeated exposure to fortifying additives in mutagens makes your juggernaut form impervious. Whenever you're affected by a juggernaut mutagen, you gain resistance to all physical damage equal to your Intelligence modifier (minimum 0).</p>
 ------ Description (fr) ------
