--- a/data/feats/class-14-BuaTJxALqxM5EZav.htm
+++ b/data/feats/class-14-BuaTJxALqxM5EZav.htm
@@ -1,13 +1,12 @@
 Name: Perfect Finisher
-Nom: Botte parfaite
+Nom: Coup final parfait
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You focus your panache into an impeccable assault.
-Avantage: Vous concentrez votre panache dans un assaut impeccable.
+Avantage: Vous utilisez le meilleur de deux jets d'attaque pour votre Frappe.
 
 ------ Description (en) ------
 <p>You focus your panache into an impeccable assault. Make a @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Strike}, rolling the attack roll twice and using the better result.</p>
