--- a/data/feats/class-14-HxkAhxcGvua6SkfS.htm
+++ b/data/feats/class-14-HxkAhxcGvua6SkfS.htm
@@ -2,14 +2,13 @@ Name: Glib Mutagen
 Nom: Mutagène de bagou
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: Your silvertongue mutagen transcends languages and plausibility.
-Avantage: Votre mutagène en langue argentée transcende les langues et la plausibilité.
+Avantage: Votre mutagène de langue dorée ignore les malus de circonstances et sont compris par tous ceux qui vous écoutent.
 
 ------ Description (en) ------
 <p>Your silvertongue mutagen transcends languages and plausibility. When affected by a silvertongue mutagen you have created, you ignore circumstance penalties to Deception, Diplomacy, Intimidation, and Performance checks. In addition, your words transcend linguistic barriers; everyone listening to you speak hears your words as if you were speaking in their own language (though you do not actually speak that language, nor does this ability allow you to understand any additional languages).</p>
 ------ Description (fr) ------
-<p> Vos mutagènes de langue dorée transcendent les langues et la vraisemblance. Quand vous êtes sous l’effet d’un mutagène de langue dorée que vous avez créé, vous ignorez les malus de circonstances aux tests de Duperie, Diplomatie, Intimidation et Représentation. En outre, vos mots transcendent les barrières linguistiques : tous ceux qui vous écoutent vous comprennent comme si vous parliez leur propre langue (vous ne parlez cependant pas cette langue et ce pouvoir ne vous permet pas non plus de comprendre des langues supplémentaires).</p>
+<p>Vos mutagènes de langue dorée transcendent les langues et la vraisemblance. Quand vous êtes sous l’effet d’un mutagène de langue dorée que vous avez créé, vous ignorez les malus de circonstances aux tests de Duperie, Diplomatie, Intimidation et Représentation. En outre, vos mots transcendent les barrières linguistiques : tous ceux qui vous écoutent vous comprennent comme si vous parliez leur propre langue (vous ne parlez cependant pas cette langue et ce pouvoir ne vous permet pas non plus de comprendre des langues supplémentaires).</p>
