--- a/data/equipment/equipment-17-XXALNl2JjJket1vr.htm
+++ b/data/equipment/equipment-17-XXALNl2JjJket1vr.htm
@@ -1,5 +1,5 @@
 Name: Handcuffs (Superior)
-Nom: Menottess à cliquet (supérieur)
+Nom: Menottes à cliquet (supérieur)
 État: libre
 
 ------ Description (en) ------
