--- a/data/equipment/equipment-02-hyMbJb2MRF5beIaU.htm
+++ b/data/equipment/equipment-02-hyMbJb2MRF5beIaU.htm
@@ -1,7 +1,6 @@
 Name: Archaic Wayfinder
 Nom: Guide archaïque
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong> Cast a Spell</p>
