--- a/data/feats/class-14-OEwNLolzBarx8icm.htm
+++ b/data/feats/class-14-OEwNLolzBarx8icm.htm
@@ -1,13 +1,12 @@
 Name: Explosive Death Drop
 Nom: Projection explosive
 PrereqEN: Blazing Talon Surge
-PrereqFR: 
-État: changé
-État d'origine: libre
+PrereqFR: Déferlement d'ergots enflammés
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You lift your enemy into the air before bringing them crashing down with a fiery detonation
-Avantage: Vous soulevez votre ennemi dans les airs avant de le faire s'écraser avec une détonation enflammée.
+Avantage: Vous infligez des dégâts de feu et mettez À terre votre adversaire.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are in @Compendium[pf2e.feats-srd.rbiMK71SvGZGRLJ1]{Rain of Embers Stance} and have a target @Compendium[pf2e.conditionitems.kWc1fhmv9LBiTuei]{Grabbed} or @Compendium[pf2e.conditionitems.VcDeM8A5oI6VqhbM]{Restrained}.</p>
@@ -19,12 +18,11 @@ Avantage: Vous soulevez votre ennemi dans les airs avant de le faire s'écraser 
 <p><strong>Failure</strong> The target is no longer grabbed.</p>
 <p><strong>Critical Failure</strong> As failure, but you fall prone.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> <a class="entity-link" draggable="true" data-pack="pf2e.feats-srd" data-id="XYaaj872JOO9CAws"><i class="fas fa-suitcase"></i>Déferlement d'ergots enflammés</a></p>
-<p><strong>Conditions</strong> Vous avez adopté <a class="entity-link" draggable="true" data-pack="pf2e.feats-srd" data-id="rbiMK71SvGZGRLJ1"><i class="fas fa-suitcase"></i>Posture de la pluie de charbons ardents</a> et avez une cible <a class="entity-link" draggable="true" data-pack="pf2e.conditionitems" data-id="kWc1fhmv9LBiTuei"><i class="fas fa-suitcase"></i> Saisie</a> ou <a class="entity-link" draggable="true" data-pack="pf2e.conditionitems" data-id="VcDeM8A5oI6VqhbM"><i class="fas fa-suitcase"></i>Entravée</a>.</p>
-<hr>
+<p><strong>Conditions</strong> Vous avez adopté la @Compendium[pf2e.feats-srd.rbiMK71SvGZGRLJ1]{Posture de la pluie de charbons ardents} et avez une cible @Compendium[pf2e.conditionitems.kWc1fhmv9LBiTuei]{Saisie} ou @Compendium[pf2e.conditionitems.VcDeM8A5oI6VqhbM]{Entravée}.</p>
+<hr />
 <p>Vous soulevez votre ennemi en l'air avant de l'envoyer s'écraser au sol dans un geste fougueux. Faites un test d'Athlétisme contre le DD de Vigueur de votre cible. Vous subissez une pénalité de circonstance de –1 à votre test si la cible est d'une taille supérieure à la vôtre et une pénalité de –3 si elle est de taille encore supérieure à çà. Vous obtenez un bonus de circonstances de +1 à votre test si la cible est plus petite que vous d'une taille et de +3 si elle est de taille encore inférieure à çà.</p>
-<hr>
-<p><strong>Succès critique</strong> La cible subit <a class="inline-roll roll" title="fire" data-mode="roll" data-flavor="fire" data-formula="12d6"><i class="fas fa-dice-d20"></i>12d6</a> dégâts de feu et tombe <a class="entity-link" draggable="true" data-pack="pf2e.conditionitems" data-id="j91X7x0XSomq8d60"><i class="fas fa-suitcase"></i>À terre</a> dans un case inoccupée adjacente de votre choix. La cible n'est plus saisie. La cible et toute créature qui lui est adjacente subit aussi <a class="inline-roll roll" title="persistent fire" data-mode="roll" data-flavor="persistent fire" data-formula="1d6"><i class="fas fa-dice-d20"></i>1d6</a> dégâts de feu persistant.</p>
-<p><strong>Succès</strong> Comme avec un succès critique, mais la cible subit <a class="inline-roll roll" title="fire" data-mode="roll" data-flavor="fire" data-formula="6d6"><i class="fas fa-dice-d20"></i>6d6</a> dégâts de feu au lieu de 12d6 et les créatures ne subissent pas de dégâts de feu persistants.</p>
+<hr />
+<p><strong>Succès critique</strong> La cible subit <a class="inline-roll roll" title="feu" data-mode="roll" data-flavor="feu" data-formula="12d6"><i class="fas fa-dice-d20"></i>12d6</a> dégâts de feu et tombe <a class="entity-link" draggable="true" data-pack="pf2e.conditionitems" data-id="j91X7x0XSomq8d60"><i class="fas fa-suitcase"></i>À terre</a> dans une case inoccupée adjacente de votre choix. La cible n'est plus Saisie. La cible et toute créature qui lui est adjacente subit aussi <a class="inline-roll roll" title="persistent fire" data-mode="roll" data-flavor="feu persistant" data-formula="1d6"><i class="fas fa-dice-d20"></i>1d6</a> dégâts de feu persistant.</p>
+<p><strong>Succès</strong> Comme avec un succès critique, mais la cible subit <a class="inline-roll roll" title="feu" data-mode="roll" data-flavor="feu" data-formula="6d6"><i class="fas fa-dice-d20"></i>6d6</a> dégâts de feu au lieu de 12d6 et les créatures ne subissent pas de dégâts de feu persistants.</p>
 <p><strong>Échec</strong> La cible n'est plus saisie.</p>
 <p><strong>Échec critique</strong> Comme avec un échec sauf que vous tombez À terre.</p>
