--- a/data/feats/class-20-LLrGafdJij7qiWZi.htm
+++ b/data/feats/class-20-LLrGafdJij7qiWZi.htm
@@ -7,7 +7,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You have learned to manipulate reflections of magic, similar to the resonant reflections.
-Avantage: Vous avez appris à manipuler les reflets de la magie, comme les reflets résonnants.
+Avantage: Vous avez appris à manipuler les reflets de la magie, comme les reflets résonants.
 SpoilersEN: Extinction Curse
 SpoilersFR: 
 
