--- a/data/equipment/equipment-05-R8I13CDRzvpVXOVe.htm
+++ b/data/equipment/equipment-05-R8I13CDRzvpVXOVe.htm
@@ -1,7 +1,6 @@
 Name: Pacifying
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Pacificatrice (rune)
+État: libre
 
 ------ Description (en) ------
 <p>This rune turns weapons into instruments of peacemaking.</p>
@@ -10,6 +9,6 @@ Nom:
 <p><strong>Effect</strong> The damaged creature must succeed at a DC 20 Will save or be pacified. A pacified creature takes a -2 penalty to attack rolls on any attacks that aren't nonlethal for 1 minute, and the creature also experiences a clear psychic warning that they should stop dealing lethal damage.</p>
 ------ Description (fr) ------
 <p>Cette rune transforme les armes en instruments de paix.</p> 
-<p><strong>Activate</strong>  <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">R</span>  commande (mentale);</p> 
-<p><strong>Déclencheur</strong>  Vous endommagez une créature avec une arme pacificatrice;</p> 
+<p><strong>Activate</strong> <span class="pf2-icon">R</span> (Mental) Sur ordre;</p> 
+<p><strong>Déclencheur</strong>  Vous portez des dégâts une créature avec une arme pacificatrice;</p> 
 <p><strong>Effet</strong>  La créature endommagée doit réussir une sauvegarde de Volonté DC 20 ou être apaisée. Une créature pacifiée subit un malus de -2 aux jets d'attaque sur toutes les attaques qui ne sont pas non létales pendant 1 minute, et la créature reçoit également un avertissement psychique clair lui indiquant qu'elle doit cesser d'infliger des dégâts létaux.</p>
