--- a/data/equipment/equipment-12-uz3JCjRvkE44jxMd.htm
+++ b/data/equipment/equipment-12-uz3JCjRvkE44jxMd.htm
@@ -1,5 +1,5 @@
 Name: Fearsome (Greater)
-Nom: Effrayante (supérieure)
+Nom: Effrayante (supérieure, rune)
 État: libre
 
 ------ Description (en) ------
