--- a/data/equipment/equipment-03-6nrCxNQFycUVFOV2.htm
+++ b/data/equipment/equipment-03-6nrCxNQFycUVFOV2.htm
@@ -1,5 +1,5 @@
 Name: Thieves' Tools (Infiltrator)
-Nom: Outils de voleur d'infiltration
+Nom: Outils de voleur (infiltration)
 État: officielle
 
 ------ Description (en) ------
