--- a/data/feats/archetype-02-lslR2UfP3ze7TFYu.htm
+++ b/data/feats/archetype-02-lslR2UfP3ze7TFYu.htm
@@ -1,7 +1,7 @@
 Name: Eldritch Researcher Dedication
 Nom: Dévouement de Chercheur Mystique 
 PrereqEN: trained in Arcana|trained in Occultism
-PrereqFR: qualifié en Arcanes|Qualifié en occultisme
+PrereqFR: qualifié en Arcanes|qualifié en occultisme
 État: libre
 
 ------ Description (en) ------
