--- a/data/equipment/equipment-19-b2shhButUcNimET9.htm
+++ b/data/equipment/equipment-19-b2shhButUcNimET9.htm
@@ -1,7 +1,6 @@
 Name: Mask of the Banshee (Greater)
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Masque de la Banshie (supérieur)
+État: libre
 
 ------ Description (en) ------
 <p>This ice-blue half-mask is adorned with a wicked silver grin that covers the wearer's mouth, leaving the rest of the face uncovered. You gain a +3 item bonus to Intimidation checks.</p>
@@ -15,11 +14,11 @@ Nom:
 <li>+3 item bonus to Intimidation checks</li>
 </ul>
 ------ Description (fr) ------
-<p>Ce demi-masque bleu glacier est orné d’un rictus d’argent méchant qui couvre la bouche de son porteur, laissant le reste du visage à découvert. Vous gagnez un bonus d'objet de +3 aux tests d'intimidation.</p>
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">2 </span>envision, Interact;</p>
-<p><strong>Fréquence</strong> une fois par jour;</p>
-<p><strong>Effet</strong> Le masque émet un cri à vous glacer l'âme qui inflige [[/r 8d10]] dégâts négatifs à chaque créature vivante dans une émanation de 40 pieds (sauvegarde de Fortitude de base DC 41).</p>
-<p><strong>Conditions d'artisanat</strong> Fournissez un moulage de <em>gémissement de la banshee</em>.</p>
+<p>Ce demi-masque bleu glacé est orné d’un rictus d’argent malveillant qui couvre la bouche de son porteur, laissant le reste du visage découvert. Vous gagnez un bonus d'objet de +3 aux tests d'intimidation.</p>
+<p><strong>Activation</strong> <span class="pf2-icon">2 </span>Imaginer, Interagir</p>
+<p><strong>Fréquence</strong> une fois par jour</p>
+<p><strong>Effet</strong> Le masque émet un cri à vous glacer l'âme qui inflige [[/r 8d10]] dégâts négatifs à chaque créature vivante dans un rayon de 12 mètres (jet de Sauvegarde Vigueur DD 41).</p>
+<p><strong>Conditions de fabrication</strong> Fournir un sort de Plainte d'Outre-tombe.</p>
 <hr />
 <p>Effets appliqués automatiquement:</p>
 <ul>
