--- a/data/feats/class-16-05k4nkjazjjEUoGu.htm
+++ b/data/feats/class-16-05k4nkjazjjEUoGu.htm
@@ -1,17 +1,14 @@
 Name: Blank Slate
 Nom: Page blanche
 PrereqEN: legendary in Deception
-PrereqFR: 
-État: changé
-État d'origine: officielle
+PrereqFR: légendaire en Duperie
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: Your deceptions confound even the most powerful mortal divinations.
-Avantage: Vos tromperies confondent même les plus puissantes divinations des mortels.
+Avantage: Vous échappez aux effets de divination, de révélation et de scrutation.
 
 ------ Description (en) ------
 <p>Your deceptions confound even the most powerful mortal divinations. Detection, revelation, and scrying effects pass right over you, your possessions, and your auras, detecting nothing unless the detecting effect has a counteract level of 10 or higher. For example, detect magic would still detect other magic in the area but not any magic on you, true seeing wouldn't reveal you, locate or scrying wouldn't find you, and so on.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> légendaire en Duperie</p>
-<hr>
-<p>Vous êtes capable de tromper les plus puissants effets de divination des mortels. Les effets de détection, de révélation et de scrutation ne repèrent ni vous, ni vos possessions, ni vos auras, et ne détectent rien, sauf si l’effet utilisé dans ce but possède un niveau de contre supérieur ou égal à 20. Par exemple : détection de la magie permettra toujours de détecter la présence d’une autre magie dans la zone, mais aucune magie qui vous affecte ; vision lucide ne vous repérera pas ; localisation ou scrutation ne permettront pas de vous trouver ; et ainsi de suite.</p>
+<p>Vous êtes capable de tromper les plus puissants effets de divination des mortels. Les effets de détection, de révélation et de scrutation ne repèrent ni vous, ni vos possessions, ni vos auras et ne détectent rien, sauf si l’effet utilisé dans ce but possède un niveau de contre supérieur ou égal à 10. Par exemple : Détection de la magie permettra toujours de détecter la présence d’une autre magie dans la zone, mais d'aucune magie qui vous affecte ; Vision lucide ne vous repérera pas ; Localisation ou Scrutation ne permettront pas de vous trouver ; et ainsi de suite.</p>
