--- a/data/feats/class-16-6AXAJuMEMpxU27PJ.htm
+++ b/data/feats/class-16-6AXAJuMEMpxU27PJ.htm
@@ -2,15 +2,13 @@ Name: Dispelling Slice
 Nom: Coupe dissipante
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: Your sneak attack slices through the threads binding magic to a target.
-Avantage: Votre attaque sournoise tranche les fils qui lient la magie à une cible.
------- Benefits and spoiler ----
-Avantage: Votre attaque sournoise tranche les fils qui lient la magie à une cible.
+Avantage: Votre attaque sournoise dissipe un effet magique.
+
 ------ Description (en) ------
 <p>Your sneak attack slices through the threads binding magic to a target. Make a Strike against a flat-footed creature. If your Strike deals sneak attack damage, you attempt to counteract a single spell active on the target (your choice). Your counteract level is equal to half your level (rounded up), and your counteract check modifier is equal to your class DC – 10.</p>
 ------ Description (fr) ------
-<p>Votre attaque sournoise tranche les fils qui relient une cible et la ma gie qui l’affecte. Vous faites une Frappe contre une créature prise au dépourvu (de votre choix). Si votre Frappe inflige des dégâts d’attaque sournoise, vous tentez de contrer un unique sort qui affecte cette cible. Votre niveau de contre est égal à votre niveau de roublard et votre modificateur de test de contre est égal à votre DD de classe − 10.</p>
+<p>Votre attaque sournoise tranche les fils qui relient une cible et la magie qui l’affecte. Vous faites une Frappe contre une créature Prise au dépourvu (de votre choix). Si votre Frappe inflige des dégâts d’attaque sournoise, vous tentez de contrer un unique sort qui affecte cette cible. Votre niveau de contre est égal à votre niveau de roublard et votre modificateur de test de contre est égal à votre DD de classe − 10.</p>
