révision dons de classe 16

--- a/data/feats/class-16-EWeso1zDkCLGlnsW.htm
+++ b/data/feats/class-16-EWeso1zDkCLGlnsW.htm
@@ -2,8 +2,11 @@ Name: Reckless Abandon (Barbarian)
 Nom: Dangereux abandon (Barbare)
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
+
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: Lorsque vous êtes sous la moitié de vos points de vie, votre rage vous octroie un bonus de +2 aux jets d'attaque, un malus de -2 à la CA et de -1 aux jets de sauvegarde.
 
 ------ Description (en) ------
 <section class="details">
@@ -14,5 +17,5 @@ PrereqFR:
 </section>
 ------ Description (fr) ------
 <p><strong>Déclencheur</strong> Votre tour commence et vous avez la moitié ou moins de vos Points de vie.</p>
-<hr>
-<p>Votre sang s'échauffe lorsque vous êtes sur le point de perdre et vous abandonnez alors toute précaution pour mettre un terme au combat. Vous obtenez un bonus de circonstances de +2 aux jets d'attaques, une pénalité de –2 à la CA et une pénalité de –1 aux jets de sauvegarde. Ces pénalités et ce bonus durent jusqu'à la fin de votre Rage ou jusqu'à ce que vous soyez revenu au dessus de la moitié de vos Points de vie, selon ce qui advient en premier.</p>
+<hr />
+<p>Votre sang s'échauffe lorsque vous êtes sur le point de perdre et vous abandonnez alors toute précaution pour mettre un terme au combat. Vous obtenez un bonus de circonstances de +2 à vos jets d'attaque, une pénalité de –2 à la CA et une pénalité de –1 aux jets de sauvegarde. Ces pénalités et ce bonus durent jusqu'à la fin de votre Rage ou jusqu'à ce que vous soyez revenu au dessus de la moitié de vos Points de vie, selon ce qui advient en premier.</p>
