--- a/data/feats/class-16-hr9maYUbtrNxpBPw.htm
+++ b/data/feats/class-16-hr9maYUbtrNxpBPw.htm
@@ -2,12 +2,11 @@ Name: Exploitive Bomb
 Nom: Bombe d'érosion
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You mix a substance into the bomb to foil resistances.
-Avantage: Vous mélangez une substance dans la bombe pour déjouer les résistances.
+Avantage: Votre bombe réduit la résistance de l'ennemi au type de dégâts qu'elle inflige.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per round</p>
@@ -17,5 +16,5 @@ Avantage: Vous mélangez une substance dans la bombe pour déjouer les résistan
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par round</p>
 <p><strong>Déclencheur</strong> Vous utilisez Alchimie rapide pour fabriquer une bombe alchimique qui est inférieure d’au moins 2 niveaux à votre niveau d’alchimie avancée.</p>
-<hr>
+<hr />
 <p>Vous ajoutez à votre bombe une substance qui sape les résistances de vos ennemis. La bombe réduit toute résistance de l’ennemi à son type de dégâts d’une valeur égale à votre niveau, mais seulement pour cette attaque.</p>
