--- a/data/feats/class-16-mj1pVVFtqGLKgCQM.htm
+++ b/data/feats/class-16-mj1pVVFtqGLKgCQM.htm
@@ -2,14 +2,12 @@ Name: Genius Mutagen
 Nom: Mutagène de génie
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: Specialized tweaks to your formula that supplements your genius considerably broaden the benefits you gain from cognitive mutagens.
-Avantage: Les ajustements spécialisés de votre formule qui complètent votre génie élargissent considérablement les avantages que vous tirez des mutagènes cognitifs.
------- Benefits and spoiler ----
-Avantage: Les ajustements spécialisés de votre formule qui complètent votre génie élargissent considérablement les avantages que vous tirez des mutagènes cognitifs.
+Avantage: vous bénéficiez du bonus d’objet du mutagène cognitif pour vos tests de Duperie, Diplomatie, Intimidation, Médecine, Nature, Représentation, Religion et Survie et obtenez une télépathie.
+
 ------ Description (en) ------
 <p>Specialized tweaks to your body's chemical composition considerably broaden the benefits you gain from cognitive mutagens. When you're affected by a cognitive mutagen, you also gain the mutagen's item bonus to Deception, Diplomacy, Intimidation, Medicine, Nature, Performance, Religion, and Survival checks. In addition, you can communicate telepathically with creatures within 60 feet with whom you share a language. The communication is two-way once you establish it, so a creature you contact can also communicate with you.</p>
 ------ Description (fr) ------
