--- a/data/equipment/equipment-06-s97FDCHi2UcfzKGn.htm
+++ b/data/equipment/equipment-06-s97FDCHi2UcfzKGn.htm
@@ -12,9 +12,9 @@ Nom: Anneau du bélier
 ------ Description (fr) ------
 <p>Ce lourd anneau de fer a la forme d’une tête de bélier aux cornes enroulées.</p>
 <hr />
-<p><strong>Activation</strong> <span class="pf2-icon">A</span> or more (Interagir)</p>
-<p> <strong>Frequency</strong> 1 fois par minute;</p> 
-<p><strong>Effet</strong> Une déflagration de force en forme de bélier frappe un adversaire à 18 m ou moins dans votre champ de vision. Le nombre d’actions que vous dépensez pour Activer cet objet (de 1 à 3) détermine la puissance du coup. Le coup inflige 2d6 dégâts de force et repousse la cible de 1,50 m par action dépensée. La cible doit faire un jet de Vigueur DD 22.</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> 1 action ou plus (Interagir)</p>
+<p> <strong>Frequency</strong> 1 fois par minute</p> 
+<p><strong>Effet</strong> Une déflagration de force en forme de bélier frappe un adversaire à 18 mètres ou moins dans votre champ de vision. Le nombre d’actions que vous dépensez pour Activer cet objet (de 1 à 3) détermine la puissance du coup. Le coup inflige 2d6 dégâts de force et repousse la cible de 1,50 mètres par action dépensée. La cible doit faire un jet de Vigueur DD 22.</p>
 <p><strong>Succès critique</strong> La cible n’est pas affectée </p>
 <p><strong>Succès</strong>  La cible subit la moitié des dégâts et elle est repoussée deux fois moins loin. </p>
 <p><strong>Échec</strong>  La cible subit la totalité des dégâts et elle est repoussée de la distance normale. </p>
