--- a/data/equipment/equipment-07-Oudcra1CGDmUq0BH.htm
+++ b/data/equipment/equipment-07-Oudcra1CGDmUq0BH.htm
@@ -24,7 +24,7 @@ Nom: Manteau insignifiant
 <p><strong>Activation</strong> 1 minute (Imaginer, Interagir)</p>
 <p><strong>Fréquence</strong> une fois par jour</p>
 <p><strong>Conditions</strong> Vous vous faites passer pour quelqu'un d'autre</p>
-<p><strong>Effet</strong> Lors d'une conversation ou d'une autre interaction décontractée avec d'autres créatures, vous pouvez ajuster le fermoir du manteau'pour modifier les souvenirs de ces créatures des 5 dernières minutes de leur interaction avec vous. Chaque créature doit tenter une sauvegarde de Volonté à un niveau de DD 25.</p>
+<p><strong>Effet</strong> Lors d'une conversation ou d'une autre interaction décontractée avec d'autres créatures, vous pouvez ajuster le fermoir du manteau'pour modifier les souvenirs de ces créatures des 5 dernières minutes de leur interaction avec vous. Chaque créature doit tenter une sauvegarde de Volonté DD 25.</p>
 <p><strong>Succès critique</strong> La créature se souvient clairement de l'interaction et se rend compte que vous essayiez de modifier sa mémoire.</p>
 <p><strong>Succès</strong> La créature se souvient clairement de l'interaction.</p>
 <p><strong>Échec</strong> Vous décidez si la créature se souvient ou non de l'interaction. Vous pouvez également modifier des détails mineurs dont la créature se souvient à propos de l'interaction, comme l'heure, le lieu et si l'interaction était favorable, comme déterminé par le MJ.</p>
