révision dons de classe 16

--- a/data/feats/class-16-uL6q4wtwvuP8I4po.htm
+++ b/data/feats/class-16-uL6q4wtwvuP8I4po.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You take a moment to center yourself, then unleash a powerful blow that sends your target tumbling away.
-Avantage: Vous prenez un moment pour vous recentrer, puis vous déchaînez un coup puissant qui fait dégringoler votre cible.
+Avantage: Votre Frappe à mains nues repousse la cible et la fait tomber à terre.
 
 ------ Description (en) ------
 <p>You take a moment to center yourself, then unleash a powerful blow that sends your target tumbling away.</p>
@@ -14,5 +14,5 @@ Avantage: Vous prenez un moment pour vous recentrer, puis vous déchaînez un co
 <p>If another creature or physical object would prevent this movement, both your target and the blocking creature or object take [[/r 1d6 #bludgeoning]] bludgeoning damage per 5 feet of movement that was prevented.</p>
 ------ Description (fr) ------
 <p>Vous prenez un moment pour vous recentrer vous-même, puis relâchez un coup puissant qui envoie valdinguer au loin votre cible.</p>
-<p>Faites une Frappe à mains nues. Si vous touchez, la cible doit réussir un jet de Vigueur contre votre DD de classeou être repoussée à 3 m directement en arrière par rapport à vous (ou à 6 m en cas de coup critique) et se retrouver @Compendium[pf2e.conditionitems.j91X7x0XSomq8d60]{À terre}.</p>
+<p>Faites une Frappe à mains nues. Si vous touchez, la cible doit réussir un jet de Vigueur contre votre DD de classe ou être repoussée à 3 m directement en arrière par rapport à vous (ou à 6 m en cas de coup critique) et se retrouver @Compendium[pf2e.conditionitems.j91X7x0XSomq8d60]{À terre}.</p>
 <p>Si une autre créature ou objet physique vient faire obstacle à ce mouvement, votre cible comme l'objet ou la créature qui la bloquent subissent [[/r 1d6 #contondants]] dégâts contondants par tranche de 1,5 m de déplacement qui a été ainsi empêché.</p>
