--- a/data/equipment/armor-13-nzQKwdUxzmmwWtzT.htm
+++ b/data/equipment/armor-13-nzQKwdUxzmmwWtzT.htm
@@ -1,7 +1,6 @@
 Name: Medusa's Scream
-Nom: Cri de méduse
-État: changé
-État d'origine: libre
+Nom: Bouclier du cri de la méduse
+État: libre
 
 ------ Description (en) ------
 <p>The ghastly visage of a slain <em>medusa's </em>head stares out from this <em>steel shield</em> (Hardness 13, HP 52, BT 26). The shield comes with a thick leather cover to conceal the head.</p>
@@ -24,10 +23,10 @@ Nom: Cri de méduse
 </tbody>
 </table>
 ------ Description (fr) ------
-L'effroyable visage d'une tête de <em>méduse </em>tuée se détache de ce <em>bouclier d'acier</em> (Solidité 13, PV 52, SR 26). Le bouclier est équipé d'une épaisse housse de cuir pour dissimuler la tête.</p>
-<p><strong>Activation</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">2</span> Interagir (visuel);</p>
-<p><strong>Fréquence</strong> une fois par jour;</p>
-<p><strong>Effet</strong> Vous révélez le visage de la méduse, concentrant son regard sur une créature dans un rayon de 9 mètres. Le bouclier lance<em> Chair en pierre</em> avec une portée de 9 mètres.</p>
+L'effroyable visage d'une tête de méduse tuée se détache de ce bouclier d'acier (Solidité 13, PV 52, SR 26). Le bouclier est équipé d'une épaisse housse de cuir pour dissimuler la tête.</p>
+<p><strong>Activation</strong> <span class="pf2-icon">2</span> Interagir (visuel)</p>
+<p><strong>Fréquence</strong> une fois par jour</p>
+<p><strong>Effet</strong> Vous révélez le visage de la méduse, concentrant son regard sur une créature dans un rayon de 9 mètres. Le bouclier lance  @Compendium[pf2e.spells-srd.znv4ECL7ZtuiagtA]{Chair en pierre} avec une portée de 9 mètres.</p>
 <p><strong>Conditions de fabrication</strong> Les matières premières initiales doivent inclure la tête d'une méduse.</p>
 <table style="height : 32px;" ; border="1">
 <tbody>
