--- a/data/equipment/armor-13-TyW1XOWYMM2xHGaI.htm
+++ b/data/equipment/armor-13-TyW1XOWYMM2xHGaI.htm
@@ -1,7 +1,6 @@
 Name: Medusa's Scream (Greater)
-Nom: Cri de méduse (Supérieur)
-État: changé
-État d'origine: libre
+Nom: Bouclier du cri de la méduse (supérieur)
+État: libre
 
 ------ Description (en) ------
 <p>The ghastly visage of a slain <em>medusa's </em>head stares out from this <em>steel shield</em> (Hardness 15, HP 60, BT 30). The shield comes with a thick leather cover to conceal the head.</p>
@@ -24,9 +23,9 @@ Nom: Cri de méduse (Supérieur)
 </tbody>
 </table>
 ------ Description (fr) ------
-L'effroyable visage d'une tête de <em>méduse </em>tuée se détache de ce <em>bouclier d'acier</em> (Solidité 15, PV 60, SR 30). Le bouclier est équipé d'une épaisse housse de cuir pour dissimuler la tête.</p>
-<p><strong>Activation</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">2</span> Interagir (visuel);</p>
-<p><strong>Fréquence</strong> une fois par heure;</p>
+<p>L'effroyable visage d'une tête de méduse tuée se détache de ce bouclier d'acier (Solidité 15, PV 60, SR 30). Le bouclier est équipé d'une épaisse housse de cuir pour dissimuler la tête.</p>
+<p><strong>Activation</strong> <span class="pf2-icon">2</span> Interagir (visuel)</p>
+<p><strong>Fréquence</strong> une fois par heure</p>
 <p><strong>Effet</strong> Vous révélez le visage de la méduse, concentrant son regard sur une créature dans un rayon de 9 mètres. Le bouclier lance @Compendium[pf2e.spells-srd.znv4ECL7ZtuiagtA]{Chair en pierre} avec une portée de 9 mètres et un DD de 35.</p>
 <p><strong>Conditions de fabrication</strong> Les matières premières initiales doivent inclure la tête d'une méduse.</p>
 <table style="height : 32px;" ; border="1">
