--- a/data/equipment/equipment-17-ByRyBRjNBcK5rwQ9.htm
+++ b/data/equipment/equipment-17-ByRyBRjNBcK5rwQ9.htm
@@ -1,6 +1,6 @@
 Name: Crystal Ball (Peridot)
 Nom: Boule de cristal (Péridot)
-État: auto-trad
+État: libre
 
 ------ Description (en) ------
 <p>This polished crystal sphere enhances scrying magic. Any visual information received through a spell with the scrying trait that was cast by the <em>crystal ball</em> appears within the sphere, and any auditory information sounds out from the surface of the sphere. When you cast a @Compendium[pf2e.spells-srd.r784cIz17eWujtQj]{Scrying} spell by any other means while holding the sphere, you can relay any information you receive in the same way, allowing others to see or hear the target.</p>
