--- a/data/equipment/armor-16-R1I1MEKwDYtCfZr3.htm
+++ b/data/equipment/armor-16-R1I1MEKwDYtCfZr3.htm
@@ -1,7 +1,6 @@
 Name: Dragonhide Buckler (High-Grade)
 Nom: Targe en peau de dragon (Haute qualité)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><span>Dragonhide shields are each immune to one damage type based on the type of dragon.</span></p>
@@ -15,26 +14,27 @@ Nom: Targe en peau de dragon (Haute qualité)
 <td style="box-sizing: border-box; user-select: text; color: white; width: 251px; text-align: center; background-color: #522e2c; height: 17px;"><strong>Résistance</strong></td>
 </tr>
 <tr style="box-sizing: border-box; user-select: text; height: 17px;">
-<td style="box-sizing: border-box; user-select: text; width: 116px; background-color: #f6f1e1; height: 17px; text-align: center;">Airain, or ou rouge<br><span id="ctl00_MainContent_DetailedOutput" style="box-sizing: border-box; user-select: text; display: block;"></span></td>
-<td style="box-sizing: border-box; user-select: text; width: 251px; background-color: #f6f1e1; height: 17px; text-align: center;"><span id="ctl00_MainContent_DetailedOutput">Feu</span></td>
+<td style="box-sizing: border-box; user-select: text; width: 116px; background-color: #f6f1e1; height: 17px; text-align: center;">Airain, or ou rouge</td>
+<td style="box-sizing: border-box; user-select: text; width: 251px; background-color: #f6f1e1; height: 17px; text-align: center;">Feu</td>
 </tr>
 <tr style="height: 20px;">
-<td style="box-sizing: border-box; user-select: text; width: 116px; background-color: #eee5c8; text-align: center; height: 20px;"><span id="ctl00_MainContent_DetailedOutput">Argent ou blanc</span></td>
-<td style="box-sizing: border-box; user-select: text; width: 251px; background-color: #eee5c8; text-align: center; height: 20px;"><span id="ctl00_MainContent_DetailedOutput">Froid&nbsp;</span></td>
+<td style="box-sizing: border-box; user-select: text; width: 116px; background-color: #eee5c8; text-align: center; height: 20px;">Argent ou blanc</td>
+<td style="box-sizing: border-box; user-select: text; width: 251px; background-color: #eee5c8; text-align: center; height: 20px;">Froid</span></td>
 </tr>
 <tr style="height: 20px;">
-<td style="box-sizing: border-box; user-select: text; width: 116px; background-color: #f6f1e1; text-align: center; height: 20px;"><span id="ctl00_MainContent_DetailedOutput">Bleu ou bronze</span></td>
-<td style="box-sizing: border-box; user-select: text; width: 251px; background-color: #f6f1e1; text-align: center; height: 20px;"><span id="ctl00_MainContent_DetailedOutput">Électricité&nbsp;</span></td>
+<td style="box-sizing: border-box; user-select: text; width: 116px; background-color: #f6f1e1; text-align: center; height: 20px;">Bleu ou bronze</td>
+<td style="box-sizing: border-box; user-select: text; width: 251px; background-color: #f6f1e1; text-align: center; height: 20px;">Électricité</td>
 </tr>
 <tr style="height: 20px;">
-<td style="box-sizing: border-box; user-select: text; width: 116px; background-color: #eee5c8; text-align: center; height: 20px;"><span id="ctl00_MainContent_DetailedOutput">Noir ou cuivre</span></td>
-<td style="box-sizing: border-box; user-select: text; width: 251px; background-color: #eee5c8; text-align: center; height: 20px;"><span id="ctl00_MainContent_DetailedOutput">Acide&nbsp;</span></td>
+<td style="box-sizing: border-box; user-select: text; width: 116px; background-color: #eee5c8; text-align: center; height: 20px;">Noir ou cuivre</td>
+<td style="box-sizing: border-box; user-select: text; width: 251px; background-color: #eee5c8; text-align: center; height: 20px;">Acide</td>
 </tr>
 <tr style="height: 20px;">
-<td style="box-sizing: border-box; user-select: text; width: 116px; background-color: #f6f1e1; text-align: center; height: 20px;"><span id="ctl00_MainContent_DetailedOutput">Vert</span></td>
-<td style="box-sizing: border-box; user-select: text; width: 251px; background-color: #f6f1e1; text-align: center; height: 20px;"><span id="ctl00_MainContent_DetailedOutput">Poison&nbsp;</span></td>
+<td style="box-sizing: border-box; user-select: text; width: 116px; background-color: #f6f1e1; text-align: center; height: 20px;">Vert</td>
+<td style="box-sizing: border-box; user-select: text; width: 251px; background-color: #f6f1e1; text-align: center; height: 20px;">Poison</td>
 </tr>
 </tbody>
 </table>
 
-<p><span>Le bouclier a une solidité de 5, 20 PV et une SR de 10.<br /><strong>Conditions de fabrication</strong> au moins 4000 po de peau de dragon</span></p>
+<p>Le bouclier a une solidité de 5, 20 PV et une SR de 10.</p>
+<p><strong>Conditions de fabrication</strong> au moins 4000 po de peau de dragon</p>
