--- a/data/equipment/armor-18-XKON66YXYLXlGPPg.htm
+++ b/data/equipment/armor-18-XKON66YXYLXlGPPg.htm
@@ -1,7 +1,6 @@
 Name: Breastplate of Command (Greater)
 Nom: Cuirasse de commandement (supérieur)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>This +2 greater resilient breastplate is made from shining bronze overlaid with reinforcing golden panels in the shape of lion's heads. Wearing this breastplate grants you a commanding aura. You gain a +3 item bonus to Diplomacy checks, but you take a -3 item penalty to Stealth checks to Hide and Sneak and Deception checks to Impersonate.</p>
