révision dons classe 18

--- a/data/feats/class-18-Hzzf7bi8xBMi6DCL.htm
+++ b/data/feats/class-18-Hzzf7bi8xBMi6DCL.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You have learned to exploit your enemies’ lowered defenses.
-Avantage: Vous remplacez les dégâts de précision par des dégâts d'un autre type.
+Avantage: Vous remplacez les dégâts de précision de l'attaque sournoise par des dégâts d'un autre type.
 
 ------ Description (en) ------
 <p>You have learned to exploit your enemies' lowered defenses. When you succeed or critically succeed at a Strike using your Strength modifier on the attack roll and you would deal sneak attack damage, you can change the additional damage from sneak attack into ordinary damage of the same type as your Strike, rather than precision damage.</p>
