dons de classe 18

--- a/data/feats/class-18-BtMemftiktI0Mn6X.htm
+++ b/data/feats/class-18-BtMemftiktI0Mn6X.htm
@@ -6,7 +6,7 @@ PrereqFR: spécialité du chasseur|maître chasseur
 
 ------ Benefits and spoiler ----
 Benefits: You’ve learned every possible edge to use against your foes.
-Avantage: Vous obtenez Spécialité du Chasseur : Précision.
+Avantage: Vous avez appris à utiliser tous les avantages possibles contre votre proie.
 
 ------ Description (en) ------
 <p>You've learned every possible edge to use against your foes.</p>
