révision classe 18 et préceptes

--- a/data/feats/class-20-JaBDNtNYYDfTGYad.htm
+++ b/data/feats/class-20-JaBDNtNYYDfTGYad.htm
@@ -15,5 +15,5 @@ Avantage: Vous êtes un grand guerrier capable de tenir tête aux plus farouches
 <p>In addition, creatures and effects that roll a natural 20 on an attack roll against you don't improve their result by one degree of success.</p>
 ------ Description (fr) ------
 <p>Vous êtes un grand guerrier qui peut rester fort contre les plus féroces adversaires de votre cause.</p>
-<p>Vous obtenez résistance 10 aux dégâts contondants, perforants et tranchants infligés par les créatures et les efets opposés à vos préceptes (créatures du mal pour les préceptes du bien, des créatures du bien pour les préceptes du mal, etc...).</p>
+<p>Vous obtenez résistance 10 aux dégâts contondants, perforants et tranchants infligés par les créatures et les efets opposés à vos principes (créatures du mal pour les principes du bien, des créatures du bien pour les principes du mal, etc...).</p>
 <p>De plus, les créatures et effets qui obtiennent un 20 naturel sur un jet d'attque contre vous n'améliorent pas leur résultat d'un degré de réussite.</p>
