--- a/data/feats/class-18-XfCPAoNdF2XMnH7K.htm
+++ b/data/feats/class-18-XfCPAoNdF2XMnH7K.htm
@@ -1,9 +1,8 @@
 Name: Lethal Finisher
-Nom: Botte létale
+Nom: Coup final létal
 PrereqEN: precise strike 6d6
-PrereqFR: 
-État: changé
-État d'origine: libre
+PrereqFR: Frappe précise 6d6
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You stab your foe in a vital organ, possibly killing them outright.
@@ -18,12 +17,10 @@ Avantage: Vous poignardez votre ennemi dans un organe vital, le tuant éventuell
 <p><strong>Failure</strong> You deal [[/r 12d6 #precision]] precision damage.</p>
 <p><strong>Critical Failure</strong> You deal [[/r 18d6 #precision]] precision damage.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> @Compendium[pf2e.classfeatures.RQH6vigvhmiYKKjg]{Frappe précise}&nbsp;6d6</p>
-<hr>
-<p>Vous poignardez votre adversaire dans un organe vitale, le tuant possiblement sur le champ. Faites une @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappe}. sur un succès, vous renoncez aux dégats de votre Frappe précise de la botte.</p>
-<p> la place, votre cible subit des dégâts supplémentaires de précision basés sur un jet de Vigeur contre votre DD de classe. Si votre Frappe est un coup critique, le jet de sauvegarde de la cible est plus mauvais d'un degré.</p>
-<hr>
+<p>Vous poignardez votre adversaire dans un organe vital, le tuant possiblement sur le champ. Faites une @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappe}. Sur un succès, vous renoncez aux dégats de Frappe précise du coup final.</p>
+<p>À la place, votre cible subit des dégâts supplémentaires de précision basés sur un jet de Vigueur contre votre DD de classe. Si votre Frappe est un coup critique, le résultat du jet de sauvegarde de la cible est d'un degré inférieur.</p>
+<hr />
 <p><strong>Succès critique</strong> Vous infligez [[/r 6 #précision]] dégâts de précision.</p>
-<p><strong>Succès</strong> Vous infligez [[/r 6d6&nbsp;#précision]]&nbsp;dégâts de précision.</p>
-<p><strong>Échec</strong> Vous infligez [[/r 12d6&nbsp;#précision]]&nbsp;dégâts de précision.</p>
-<p><strong>chec critique</strong> Vous infligez [[/r 18d6&nbsp;#précision]]&nbsp;dégâts de précision.</p>
+<p><strong>Succès</strong> Vous infligez [[/r 6d6 #précision]] dégâts de précision.</p>
+<p><strong>Échec</strong> Vous infligez [[/r 12d6 #précision]] dégâts de précision.</p>
+<p><strong>Échec critique</strong> Vous infligez [[/r 18d6 #précision]] dégâts de précision.</p>
