--- a/data/equipment/equipment-00-5NHciGwLcVJwEjQu.htm
+++ b/data/equipment/equipment-00-5NHciGwLcVJwEjQu.htm
@@ -104,7 +104,7 @@ Nom: Branche d'ébénite
 </tr>
 <tr style="box-sizing: border-box; user-select: text; height: 17px;">
 <td style="box-sizing: border-box; user-select: text; height: 25px; width: 220px; background-color: #eee5c8; text-align: center;">Qualité standard</td>
-<td style="box-sizing: border-box; user-select: text; width: 74px; text-align: center; background-color: #eee5c8; height: 25px;">5<span id="ctl00_MainContent_DetailedOutput" style="box-sizing: border-box; user-select: text; display: block;"></span></td>
+<td style="box-sizing: border-box; user-select: text; width: 74px; text-align: center; background-color: #eee5c8; height: 25px;">5</td>
 <td style="box-sizing: border-box; user-select: text; width: 41px; text-align: center; background-color: #eee5c8; height: 25px;">20</td>
 <td style="box-sizing: border-box; user-select: text; width: 45px; text-align: center; background-color: #eee5c8; height: 25px;">10</td>
 </tr>
@@ -127,13 +127,13 @@ Nom: Branche d'ébénite
 <td style="box-sizing: border-box; user-select: text; width: 45px; text-align: center; background-color: #f6f1e1; height: 25px;">14</td>
 </tr>
 <tr style="height: 19px;">
-<td style="box-sizing: border-box; user-select: text; width: 220px; text-align: center; background-color: #eee5c8; height: 25px;">Haute qualité<strong><br></strong></td>
+<td style="box-sizing: border-box; user-select: text; width: 220px; text-align: center; background-color: #eee5c8; height: 25px;">Haute qualité></td>
 <td style="box-sizing: border-box; user-select: text; width: 74px; text-align: center; background-color: #eee5c8; height: 25px;">10</td>
 <td style="box-sizing: border-box; user-select: text; width: 41px; text-align: center; background-color: #eee5c8; height: 25px;">40</td>
 <td style="box-sizing: border-box; user-select: text; width: 45px; text-align: center; background-color: #eee5c8; height: 25px;">20</td>
 </tr>
 <tr style="height: 19px;">
-<td style="box-sizing: border-box; user-select: text; width: 220px; text-align: center; background-color: #f6f1e1; height: 25px;"><strong>Structure</strong></td>
+<td style="box-sizing: border-box; user-select: text; width: 220px; text-align: center; background-color: #f6f1e1; height: 25px;"><strong>Structures</strong></td>
 <td style="box-sizing: border-box; user-select: text; width: 74px; text-align: center; background-color: #f6f1e1; height: 25px;">&nbsp;</td>
 <td style="box-sizing: border-box; user-select: text; width: 41px; text-align: center; background-color: #f6f1e1; height: 25px;">&nbsp;</td>
 <td style="box-sizing: border-box; user-select: text; width: 45px; text-align: center; background-color: #f6f1e1; height: 25px;">&nbsp;</td>
