--- a/data/equipment/equipment-00-VnPh324pKwd2ZB66.htm
+++ b/data/equipment/equipment-00-VnPh324pKwd2ZB66.htm
@@ -5,4 +5,4 @@ Nom: Outre
 ------ Description (en) ------
 <p><span>When it's full, a waterskin contains roughly 1 day's worth of water for a Small or Medium creature.</span></p>
 ------ Description (fr) ------
-<p>quand elle est remplie, une outre a un Encombrement L et contient environ l’équivalent d’1 jour d’eau pour une créature de taille Petite ou Moyenne.</p>
+<p>Quand elle est remplie, une outre a un Encombrement 1 et contient environ l’équivalent d’1 jour d’eau pour une créature de taille Petite ou Moyenne.</p>
