--- a/data/equipment/equipment-00-wvOYIeJjU3UDVgMG.htm
+++ b/data/equipment/equipment-00-wvOYIeJjU3UDVgMG.htm
@@ -1,9 +1,8 @@
 Name: Vial
 Nom: Fiole
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>A simple glass vial holds up to 1 ounce of liquid.</p>
 ------ Description (fr) ------
-<p><span class="fontstyle0">Une fiole en verre simple peut contenir jusqu’à 30 ml de liquide. </span> </p>
+<p>Une fiole en verre simple peut contenir jusqu’à 30 ml de liquide. </p>
