--- a/data/equipment/equipment-03-uhka9LHEP3wDKytG.htm
+++ b/data/equipment/equipment-03-uhka9LHEP3wDKytG.htm
@@ -1,7 +1,6 @@
 Name: Alchemist's Lab (Expanded)
 Nom: Laboratoire d'alchimie (complet)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You need an alchemist's lab to Craft alchemical items during downtime.</p>
