--- a/data/equipment/equipment-04-2gYZiUw9yjtb0yJY.htm
+++ b/data/equipment/equipment-04-2gYZiUw9yjtb0yJY.htm
@@ -11,7 +11,7 @@ Nom: Masque du démon
 <li>+1 item bonus to Intimidation checks</li>
 </ul>
 ------ Description (fr) ------
-<p>>Ce masque terrifiant représente le visage d’un démon grimaçant et confère un bonus d’objet de +1 aux tests d’Intimidation. <br></span></p>
+<p>>Ce masque terrifiant représente le visage d’un démon grimaçant et confère un bonus d’objet de +1 aux tests d’Intimidation.</p>
 <p><strong>Activation</strong> <span class="pf2-icon">D</span> Interagir</p> 
 <p><strong>Fréquence</strong> 1/jour</p>
-<p><strong>Effet</strong> Le masque lance le sort @Compendium[pf2e.spells-srd.4koZzrnMXhhosn0D]{Terreur} avec un DD de 20. </span></p>
+<p><strong>Effet</strong> Le masque lance le sort @Compendium[pf2e.spells-srd.4koZzrnMXhhosn0D]{Terreur} avec un DD de 20. </p>
