--- a/data/equipment/equipment-04-EGYcFO9eYfajGKEf.htm
+++ b/data/equipment/equipment-04-EGYcFO9eYfajGKEf.htm
@@ -1,5 +1,5 @@
 Name: Occult Scroll Case of Simplicity
-Nom: Étui à parchemin de cimplicité occulte
+Nom: Étui à parchemin de simplicité occulte
 État: libre
 
 ------ Description (en) ------
