--- a/data/equipment/kit-zcNBG8cMnILqXMFd.htm
+++ b/data/equipment/kit-zcNBG8cMnILqXMFd.htm
@@ -1,6 +1,6 @@
 Name: Class Kit (Investigator)
 Nom: Kit de classe (Enquêteur)
-État: auto-trad
+État: libre
 
 ------ Description (en) ------
 <div><strong>Armor</strong> studded leather armor</div>
