--- a/data/equipment/equipment-10-QEPx1fCf74xdpXBH.htm
+++ b/data/equipment/equipment-10-QEPx1fCf74xdpXBH.htm
@@ -1,6 +1,6 @@
 Name: Thurible of Revelation (Moderate)
 Nom: Encensoir de révélation (modéré)
-État: Officielle
+État: officielle
 
 ------ Description (en) ------
 <p>This brass censer dangles on a length of chain. Most <em>thuribles of revelation</em> are adorned with swirling Celestial text, though some are iron and feature Infernal or Abyssal text.</p>
