--- a/data/equipment/equipment-05-c0gjWASSeNIRNmEw.htm
+++ b/data/equipment/equipment-05-c0gjWASSeNIRNmEw.htm
@@ -20,7 +20,7 @@ Nom: L'anneau d'entrainement du guerrier
 <p><strong>Déclencheur</strong> Vous effectuez une attaque avec une arme dans laquelle vous'n'êtes pas entraîné</p>
 <p><strong>Effet</strong> Vous gagnez un bonus de circonstances de +2 au jet d'attaque. Si vous êtes un expert dans une arme, vous gagnez un bonus de circonstance de +4 au jet d'attaque.</p>
 <hr />
-<p>Effets appliqués automatiquement:</p>
+<p>Code:</p>
 <ul>
 <li> Ajoutez votre niveau aux jets d'attaque avec toutes les armes avec lesquelles vous n'êtes pas entraîné</li>
 </ul>
