--- a/data/equipment/equipment-05-iTxqImupNnm8gvoe.htm
+++ b/data/equipment/equipment-05-iTxqImupNnm8gvoe.htm
@@ -7,5 +7,5 @@ Nom: Mimétisme (rune)
 <p><span><strong>Activate</strong> <span class="pf2-icon">A</span> envision; <strong>Effect</strong> You change the shape and appearance of this armor to appear as ordinary or fine clothes of your imagining. The armor's statistics do not change. Only a creature that is benefiting from true seeing or a similar effect can attempt to disbelieve this illusion, with a DC of 25.</span></p>
 ------ Description (fr) ------
 <p>On peut changer l’aspect de cette armure d’une simple pensée.</p>
-<p><strong>Activate</strong> <span class="pf2-icon">A</span> envision</p> 
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Imaginer</p> 
 <p><strong>Effet</strong>  Vous changez la forme et l’aspect de cette armure pour qu’elle ressemble aux vêtements beaux ou ordinaires que vous imaginez. Les statistiques de l’armure ne changent pas. Seule une créature qui bénéficie d’une vision lucide ou d’un effet similaire peut tenter de discerner l’illusion contre un DD de 25.</p>
