--- a/data/equipment/equipment-08-c2Oa9UbhjwAsZaPp.htm
+++ b/data/equipment/equipment-08-c2Oa9UbhjwAsZaPp.htm
@@ -14,4 +14,4 @@ Nom: Baguette de boules de feu incendiaires (Sort de niveau 3)
 <p><strong>Activation</strong>  (Lancer un sort)</p> 
 <p><strong>Fréquence</strong> 1/jour,  plus surcharges</p> 
 <p><strong>Effet</strong> Vous lancez boule de feu  @Compendium[pf2e.spells-srd.sxQZ6yqTn0czJxVd]{Boule de feu} au niveau 3. Chaque créature qui rate son jet de sauvegarde subit des 1d6 de dégâts de feu persistants.</p>
-<p><strong>Conditions de fabrication</strong>  Fournir une incantation de boule de feu du niveau approprié.</span></p>
+<p><strong>Conditions de fabrication</strong>  Fournir une incantation de boule de feu du niveau approprié.</p>
