--- a/data/equipment/equipment-04-o1zKhvYUUc1hE2AE.htm
+++ b/data/equipment/equipment-04-o1zKhvYUUc1hE2AE.htm
@@ -17,3 +17,8 @@ Nom: Gants du guérisseur
 <p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
 <p><strong>Fréquence</strong> 1/jour</p>
 <p><strong>Effet</strong>  Vous pouvez soigner les blessures d’une créature consentante et adjacente à vous, qui récupère ainsi 2d6+7 points de vie. Il s’agit d’un effet de guérison positif. Vous ne pouvez pas blesser des morts‑vivants avec ce soin.</p>
+<hr />
+<p>Code:</p>
+<ul>
+<li>Bonus d'objet de +1 aux test de Medicine</li>
+</ul>
