--- a/data/equipment/equipment-03-MKupH1T018JubYJW.htm
+++ b/data/equipment/equipment-03-MKupH1T018JubYJW.htm
@@ -15,3 +15,8 @@ Nom: Masque de représentation
 <p>Même s’il couvre la totalité du visage, ce masque d’albâtre ne gêne pas la vision ou les autres sens. Lorsqu’il est porté, le masque confère un bonus d’objet de +1 aux tests de Représentation lorsque vous jouez une pièce de théâtre ou un numéro comique, déclamez un texte ou chantez.</p>
 <p><strong>Activation</strong> <span class="pf2-icon">A</span> Imaginer</p> 
 <p><strong>Effet</strong> Vous changez l’apparence du masque pour lui donner l’aspect artistique d’un personnage de théâtre de votre choix.</p>
+<hr />
+<p>Code:</p>
+<ul>
+<li>Bonus d’objet de +1 aux tests de Représentation Théâtre, Déclamer un texte ou Chant.</li>
+</ul>
