--- a/data/equipment/equipment-03-1r6StS0irdvi5JHY.htm
+++ b/data/equipment/equipment-03-1r6StS0irdvi5JHY.htm
@@ -17,3 +17,8 @@ Nom: Anneau de ventriloquie
 <p><strong>Activate</strong> <span class="pf2-icon">D</span> Interagir</p> 
 <p><strong>Fréquence</strong> 1/jour</p>
 <p><strong>Effet</strong> Vous faites tourner l’anneau sur votre doigt pour projeter votre voix par magie en produisant les effets du sort @Compendium[pf2e.spells-srd.yV7Ouzaoe7DHLESI]{Ventriloquie} (DD 19).</span></p>
+<hr />
+<p>Code:</p>
+<ul>
+<li>Bonus de +1 aux tests de Duperie</li>
+</ul>
