dons de compétences

--- a/data/feats/skill-01-gArdEleFCvUHtdGk.htm
+++ b/data/feats/skill-01-gArdEleFCvUHtdGk.htm
@@ -6,7 +6,7 @@ PrereqFR: qualifié en Nature
 
 ------ Benefits and spoiler ----
 Benefits: Increase your mount’s travel speed.
-Avantage: Augmenter la vitesse de voyage de votre monture
+Avantage: Vous augmentez la vitesse de voyage de votre monture
 
 ------ Description (en) ------
 <p>You know how to encourage your mount to cover ground quickly.</p>
