--- a/data/equipment/equipment-03-Epc1e1Q9M9bcwOR0.htm
+++ b/data/equipment/equipment-03-Epc1e1Q9M9bcwOR0.htm
@@ -15,3 +15,8 @@ Nom: Echarpe dansante
 <p><span><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
 <p><strong>Conditions</strong> On your most recent action, you succeeded at a Performance check to dance</p>
 <p><strong>Effet</strong> Vous devenez @Compendium[pf2e.conditionitems.DmAIPqOBomZ7H95W]{Masqué} jusqu’au début de votre prochain tour</p>
+<hr />
+<p>Code:</p>
+<ul>
+<li>Bonus d’objet de +1 aux tests de Représentation pour danser</li>
+</ul>
