dons de compétences

--- a/data/feats/skill-01-W6Gl9ePmItfDHji0.htm
+++ b/data/feats/skill-01-W6Gl9ePmItfDHji0.htm
@@ -6,7 +6,7 @@ PrereqFR: qualifié  dans au moins une compétence
 
 ------ Benefits and spoiler ----
 Benefits: Receive a fixed result on a skill check.
-Avantage: Recevoir un résultat fixe à un test de compétence
+Avantage: Vosu recevez un résultat fixe à un test de compétence.
 
 ------ Description (en) ------
 <p>Even in the worst circumstances, you can perform basic tasks. Choose a skill you're trained in. You can forgo rolling a skill check for that skill to instead receive a result of 10 + your proficiency bonus (do not apply any other bonuses, penalties, or modifiers).</p>
