--- a/data/feats/skill-04-WxL8NMW9JQ5igu0C.htm
+++ b/data/feats/skill-04-WxL8NMW9JQ5igu0C.htm
@@ -4,6 +4,10 @@ PrereqEN: Hellknight Armiger Dedication
 PrereqFR: Dévouement d'Écuyer des Chevaliers infernaux
 État: officielle
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: Vous vous Souvenez en observant un diable et ne pouvez obtenir d'échec critique.
+
 ------ Description (en) ------
 <p><strong>Trigger</strong> Your turn begins and you can observe a devil.</p>
 <hr />
@@ -11,4 +15,4 @@ PrereqFR: Dévouement d'Écuyer des Chevaliers infernaux
 ------ Description (fr) ------
 <p><strong>Déclencheur</strong> Votre tour commence et vous pouvez observer un diable.</p>
 <hr />
-<p>Votre formation de Chevalier infernal a gravé dans votre esprit d’innombrables informations détaillées à propos des habitants des Enfers. Tentez une action Se souvenir sur un diable que vous observez. Si vous obtenez un échec critique sur ce jet, il se transforme en simple échec.</p>
+<p>Votre formation de Chevalier infernal a gravé dans votre esprit d’innombrables informations détaillées à propos des habitants des Enfers. Tentez une action Se souvenir sur un diable que vous observez. Si vous obtenez un échec critique, il se transforme en simple échec.</p>
