--- a/data/equipment/equipment-09-WAMDYE9tt3W8obzr.htm
+++ b/data/equipment/equipment-09-WAMDYE9tt3W8obzr.htm
@@ -1,7 +1,6 @@
 Name: Horn of Blasting
 Nom: Cor de dévastation
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>A <em>horn of blasting</em> is a bright brass trumpet. It can be played as an instrument, granting a +2 item bonus to your Performance check.</p>
@@ -20,7 +19,20 @@ Nom: Cor de dévastation
 <li>+2 item bonus to your Performance checks</li>
 </ul>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">Un cor de dévastation est une sorte de trompette en airain. On peut en jouer comme d’un instrument qui accorde un bonus d’objet de +2 au test de Représentation.<br /></span></p>
-<p><span id="ctl00_MainContent_DetailedOutput"><strong>Activation</strong> <img class="actiondark" style="height: 15px; padding: 0px 2px 0px 2px;" src="https://2e.aonprd.com/Images/Actions/OneAction.png" alt="Single Action" /> Interagir; <strong>Frequency</strong> 1/tour; <strong>Effet</strong>  Lorsque vous activez le cor en soufflant dedans avec des intentions destructrices, il émet une note dévastatrice qui vise une créature ou un objet dans un rayon de 9 m. La note inflige 3d6 dégâts de son (jet de Vigueur basique DD 28).<br /></span></p>
-<p><span id="ctl00_MainContent_DetailedOutput"><strong>Activation</strong> <img class="actiondark" style="height: 15px; padding: 0px 2px 0px 2px;" src="https://2e.aonprd.com/Images/Actions/TwoActions.png" alt="Two Actions" /> Interagir; <strong>Frequency</strong> 1/jour; <strong>Effet</strong> Vous pouvez souffler encore plus fort pour créer une onde destructrice dans un cône de 9 m qui inflige 8d6 dégâts de son. Chaque créature de la zone fait un jet de Vigueur DD 28 avec les conséquences suivantes. <br /></span></p>
-<p><span id="ctl00_MainContent_DetailedOutput"><strong>Succès critique</strong> La créature ne reçoit pas de dégât.<br /><strong>Succès</strong> La créature subit la moitié des dégâts.<br /><strong>Echec</strong>  La créature reçoit la totalité des dégâts et est sourde pendant 2d6 rounds.</span></p>
+<p>Un cor de dévastation est une sorte de trompette en airain. On peut en jouer comme d’un instrument qui accorde un bonus d’objet de +2 au test de Représentation.</p>
+<hr />
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
+<p><strong>Frequency</strong> 1 fois par tour</p> 
+<p><strong>Effet</strong>  Lorsque vous activez le cor en soufflant dedans avec des intentions destructrices, il émet une note dévastatrice qui vise une créature ou un objet dans un rayon de 9 mètres. La note inflige [[/r 3d6]] dégâts de son (jet de Vigueur basique DD 28).</p>
+<hr />
+<p><strong>Activation</strong> <span class="pf2-icon">D</span> Interagir</p> 
+<p><strong>Frequency</strong> 1 fois par jour</p> 
+<p><strong>Effet</strong> Vous pouvez souffler encore plus fort pour créer une onde destructrice dans un cône de 9 mètres qui inflige [[/r 8d6]] dégâts de son. Chaque créature de la zone fait un jet de Vigueur DD 28 avec les conséquences suivantes. </p>
+<p><strong>Succès critique</strong> La créature ne reçoit pas de dégât.</p>
+<p><strong>Succès</strong> La créature subit la moitié des dégâts.</p>
+<p><strong>Echec</strong> La créature reçoit la totalité des dégâts et est @Compendium[pf2e.conditionitems.9PR9y0bi4JPKnHPR]{Sourde} pendant 2d6 rounds.</p>
+<hr />
+<p>Code:</p>
+<ul>
+<li>Bonus d’objet de +2 au test de Représentation</li>
+</ul>
