--- a/data/equipment/equipment-04-g2oaOGSpttfH1q6W.htm
+++ b/data/equipment/equipment-04-g2oaOGSpttfH1q6W.htm
@@ -16,3 +16,8 @@ Nom: Ceinture de levée
 <p>Cette large ceinture de cuir vous confère un bonus d’objet de +1 aux tests d’Athlétisme et augmente le poids que vous pouvez transporter sans difficulté. Vous pouvez transporter un montant d’Encombrement égal à 6 + votre modificateur de Force avant d’être surchargé, et vous pouvez transporter un Encombrement total maximum de 11 + votre modificateur de Force.<br></span></p>
 <p><strong>Activation</strong> <span class="pf2-icon">D</span> Interagir</p> 
 <p><strong>Effet</strong>  Vous soulevez un objet d’un Encombrement maximum de 8 comme s’il était très léger. Ceci nécessite vos deux mains, et si l’objet est verrouillé ou maintenu en place d’une façon ou d’une autre, vous pouvez tenter de l’Ouvrir de force en utilisant Athlétisme au cours de cette activation. L’objet conserve son poids normal et son Encombrement pour toutes autres fins — vous ignorez simplement son poids. L’effet dure jusqu’à la fin de votre prochain tour.</p>
+<hr />
+<p>Code:</p>
+<ul>
+<li>Bonus d’objet de +1 aux tests d’Athlétisme</li>
+</ul>
