--- a/data/equipment/equipment-13-Jp9K5Q9t9ZiDGSaI.htm
+++ b/data/equipment/equipment-13-Jp9K5Q9t9ZiDGSaI.htm
@@ -24,7 +24,7 @@ Nom: Cardioline de Skarja
 <p><strong>Effet</strong> : La cardioline tente de neutraliser une maladie qui vous affecte (neutralisation niveau 7, modificateur de neutralisation [[/r 1d20+23]]).</p>
 <p><strong>Conditions d'artisanat</strong> Vous devez être une Genaude noire.</p>
 <hr />
-<p>Effets appliqués automatiquement:</p>
+<p>Code:</p>
 <ul>
 <li>Bonus d'objet de +2 aux jets de sauvegarde</li>
 </ul>
