--- a/data/equipment/equipment-17-kjFFmqci69k2zMXF.htm
+++ b/data/equipment/equipment-17-kjFFmqci69k2zMXF.htm
@@ -19,7 +19,7 @@ Nom: Bottes de casse-cou (supérieures)
 <p><strong>Fréquence</strong> 1/jour</p>
 <p><strong>Effet</strong> Les bottes lancent @Compendium[pf2e.spells-srd.aqRYNoSvxsVfqglH]{Liberté de mouvement} sur vous.</p>
 <hr />
-<p>Effets appliqués automatiquement :</p>
+<p>Code:</p>
 <ul>
 <li>Bonus d'objet de +3 aux tests d'Acrobaties</li>
 <li>Bonus de circonstances de +2 aux tests pour traverser l'espace d'un ennemi en effectuant un Déplacement acrobatique</li>
