--- a/data/equipment/equipment-04-2gYZiUw9yjtb0yJY.htm
+++ b/data/equipment/equipment-04-2gYZiUw9yjtb0yJY.htm
@@ -15,3 +15,8 @@ Nom: Masque du démon
 <p><strong>Activation</strong> <span class="pf2-icon">D</span> Interagir</p> 
 <p><strong>Fréquence</strong> 1/jour</p>
 <p><strong>Effet</strong> Le masque lance le sort @Compendium[pf2e.spells-srd.4koZzrnMXhhosn0D]{Terreur} avec un DD de 20. </p>
+<hr />
+<p>Code:</p>
+<ul>
+<li>Bonus d’objet de +1 aux tests d’Intimidation</li>
+</ul>
