--- a/data/equipment/equipment-05-fprUZviW8khm2BLo.htm
+++ b/data/equipment/equipment-05-fprUZviW8khm2BLo.htm
@@ -22,6 +22,6 @@ Nom: Passe-partout
 <hr />
 <p>Code:</p>
 <ul>
-<li>Bonus d'objet de aux tests de Vol et aux test Crocheter une serrure</li>
+<li>Bonus d'objet de +1 aux tests de Vol et aux test Crocheter une serrure</li>
 </ul>
 
