--- a/data/feats/class-20-7QLLwcSKNGPWdOGG.htm
+++ b/data/feats/class-20-7QLLwcSKNGPWdOGG.htm
@@ -2,8 +2,7 @@ Name: Annihilating Swing
 Nom: Coup annihilateur
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You have learned from the brute destructive power of xulgaths and their kind.
