archétype de Tireur drow

--- a/data/equipment/consumable-02-zo0ophqfKunJFxZN.htm
+++ b/data/equipment/consumable-02-zo0ophqfKunJFxZN.htm
@@ -19,6 +19,6 @@ Nom: Poison de léthargie
 <p><strong>Jet de sauvegarde</strong> Vigueur DD 18; </p>
 <p><strong>Durée maximum</strong> 4 heures; </p>
 <p><strong>Stade 1</strong> @Compendium[pf2e.conditionitems.xYTAsEpcJE1Ccni3]{Ralenti} 1 (1 round) ;  </p>
-<p><strong>Stade 2</strong>  ralenti 1 (1 minute) ;  </p>
+<p><strong>Stade 2</strong> Ralenti 1 (1 minute) ;  </p>
 <p><strong>Stade 3</strong> @Compendium[pf2e.conditionitems.fBnFDH2MTzgFijKf]{Inconscient} sans test de Perception pour se réveiller (1 round)</p> 
-<p><strong>Stade 4</strong>  inconscient sans test de Perception pour se réveiller (1d4 heures).</p>
+<p><strong>Stade 4</strong> Inconscient sans test de Perception pour se réveiller (1d4 heures).</p>
