--- a/data/equipment/consumable-04-nn2HAN1XKkKHfVnM.htm
+++ b/data/equipment/consumable-04-nn2HAN1XKkKHfVnM.htm
@@ -16,9 +16,9 @@ Nom: Poison de Stupeur
 <p><strong>Activation</strong> <span class="pf2-icon">2</span> Interagir</p>
 <p>Le poison de stupeur est une distillation plus puissante du @Compendium[pf2e.equipment-srd.zo0ophqfKunJFxZN]{Poison de léthargie}. Une exposition subséquente au poison de stupeur ne nécessite pas que la cible tente des jets de sauvegarde supplémentaires ; seul l'échec d'un jet de sauvegarde contre une exposition en cours peut faire progresser son stade.</p>
 <hr />
-<p><strong>Jet de sauvegarde</strong> DC 20 Fortitude;</p>
-<p><strong>Durée maximale</strong> 6 heures;</p>
+<p><strong>Jet de sauvegarde</strong> Vigueur DD 20 ;</p>
+<p><strong>Durée maximale</strong> 6 heures ;</p>
 <p><strong>Stade 1</strong> @Compendium[pf2e.conditionitems.xYTAsEpcJE1Ccni3]{Ralenti} 1 et @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Pris au dépourvu} (1 round);</p>
 <p><strong>Stade 2</strong> Ralenti 2 et Pris au dépourvu (1 round);</p>
 <p><strong>Stade 3</strong> @Compendium[pf2e.conditionitems.fBnFDH2MTzgFijKf]{Inconscient} sans test de Perception pour se réveiller (1 round);</p>
-<p><strong>Stade 4</strong> Inconscient sans test de Perception pour se réveiller ([[/r 1d6 #hours]] heures)</p>
+<p><strong>Stade 4</strong> Inconscient sans test de Perception pour se réveiller ([[/r 1d6 #heures]] heures)</p>
