--- a/data/feats/archetype-08-HlSwpxreIfsglTJ8.htm
+++ b/data/feats/archetype-08-HlSwpxreIfsglTJ8.htm
@@ -1,5 +1,5 @@
 Name: Lethargy Poisoner
-Nom: Empoisonneur narcoleptique
+Nom: Empoisonneur soporifique
 PrereqEN: Drow Shootist Dedication|trained in Crafting
 PrereqFR: Dévouement de Tireur drow|qualifié en Artisanat
 État: libre
