--- a/data/equipment/equipment-17-1FKDq4Gfev5GObDT.htm
+++ b/data/equipment/equipment-17-1FKDq4Gfev5GObDT.htm
@@ -1,7 +1,6 @@
 Name: Diadem of Intellect
 Nom: Diadème d'intellect
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>An elegant, colorful gem cut into a complex geometric pattern is slotted into a narrow metal band that fits around your brow. You gain a +3 item bonus to checks to Recall Knowledge, regardless of the skill.</p>
