--- a/data/equipment/weapon-17-sJjuv1991SZ7DWWD.htm
+++ b/data/equipment/weapon-17-sJjuv1991SZ7DWWD.htm
@@ -1,6 +1,6 @@
 Name: Blight Bomb (Major)
 Nom: Bombe fléau (majeure)
-État: clibre
+État: libre
 
 ------ Description (en) ------
 <p><strong>Usage</strong> held in 1 hand</p>
