--- a/data/equipment/weapon-03-Do4rJuA1nhr2TTiF.htm
+++ b/data/equipment/weapon-03-Do4rJuA1nhr2TTiF.htm
@@ -1,5 +1,5 @@
 Name: Dwarven Daisy (Moderate)
-Nom: Fleur de mort naine (moyenne)
+Nom: Marguerite naine (moyenne)
 État: libre
 
 ------ Description (en) ------
