--- a/data/equipment/weapon-11-28osNZINXLWzqzUL.htm
+++ b/data/equipment/weapon-11-28osNZINXLWzqzUL.htm
@@ -1,7 +1,6 @@
 Name: Ghost Charge (Greater)
 Nom: Charge fantômr (supérieure)
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p><strong>Usage</strong> held in 1 hand</p>
